fix a styling issue with dark mode

--- a/src/DataTable/ui/Pagination.module.scss
+++ b/src/DataTable/ui/Pagination.module.scss
@@ -32,7 +32,6 @@
 
   .rowsPerPageSelect {
     border: none;
-    background: var(--sui-gray-150);
     border-radius: var(--sui-datatable-border-radius-small);
     height: 24px;
   }
